--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ color: rgb(200,150,255);
 font-family: "jokerman";
 text-transform: uppercase;
 font-weight: bold;
-background-color: rgb(227, 225, 41);
+background-color: rgb(200, 100, 225);
+    text-align: justify;
 
 }
 #t2{
