--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
 height:800px;
 margin:100px;
-    background-color:rgb(100,50,75);
+    background-color: yellow;
 }
  #t1{
 color: rgb(200,150,255);
