--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-body {
+html, body {
 height:800px;
 margin:100px;
     background-color: yellow;
@@ -11,6 +11,7 @@ text-transform: uppercase;
 font-weight: bold;
 background-color: rgb(200, 100, 225);
     text-align: justify;
+font-size: 50px;
 
 }
 #t2{
