--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 html, body {
-height:800px;
+height:600px;
 margin:100px;
     background-color: yellow;
 }
@@ -19,7 +19,7 @@ color: rgb(200,150,255);
 font-family: "jokerman";
 text-transform: uppercase;
 text-decoration:none;
-background-color: rgb(72, 209, 48);
+background-color: rgb(170,100,255);
 text-align: justify;
 line-height: 50px;
 font-size: 50px;
