--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 html, body {
-height:600px;
+height:800px;
 margin:100px;
     background-color: yellow;
 }
@@ -8,10 +8,12 @@ margin:100px;
 color: rgb(200,150,255);
 font-family: "jokerman";
 text-transform: uppercase;
-font-weight: bold;
-background-color: rgb(200, 100, 225);
-    text-align: justify;
+text-decoration:none;
+background-color: rgb(170,100,255);
+text-align: justify;
+line-height: 50px;
 font-size: 50px;
+font-weight: bold;
 
 }
 #t2{
@@ -44,7 +46,7 @@ font-family: "lucida handwriting",sans-serif;
 text-align:center;
 font-style: none;
 line-height: 1.5em;
-color:rgb(255, 255, 153);
+color:rgb(255, 100, 153);
 font-weight: 600;
 
 }
